# michellespkg

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: python-ci.yml
about/: index.html
api/: index.html
docs/: about.md  api.md  index.md
docs/user-guide/: getting-started.md  installation.md
examples/: example.py  tutorial.ipynb
search/: search_index.json
site/: objects.inv
site/api/: index.html
site/search/: search_index.json
site/user-guide/getting-started/: index.html
src/michellespkg/: __init__.py  shapes.py
tests/: test_shapes.py
user-guide/getting-started/: index.html
user-guide/installation/: index.html
