[project]
name = "michellespkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Michelle Hirsch", email = "mhirsch@mathworks.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
