[project]
name = "michellespkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Michelle Hirsch", email = "mhirsch@mathworks.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ghp-import>=2.1.0",
    "matplotlib>=3.10.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
    "pymdown-extensions>=10.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "pytest-cov>=6.1.1",
    "build>=1.0.0", # Add the 'build' package here
]
